kubernetes/apps/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: openwebui
    namespace: openwebui
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 8080
          protocol: TCP
    selector:
        app: openwebui
