kubernetes/apps/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: openwebui
    namespace: openwebui
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
    ingressClassName: traefik
    rules:
        - host: chat.jzvolensky.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: openwebui
                            port:
                                number: 80
